--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "clean:build": "rm -rf dist/",
     "format:check": "npx prettier src/ --check",
     "format": "npx prettier src/ --write",
+    "lint:check": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint src/ --fix --ext .js,.jsx,.ts,.tsx",
+    "check": "npm run format:check && npm run lint:check",
+    "fix": "npm run format && npm run lint",
     "clean": "npm run clean:node_modules && npm run clean:build",
     "prebuild": "npm run clean:build",
     "build": "npx tsc",
@@ -33,6 +37,19 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-functional": "^3.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
