--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+  "peerDependencies": {
+    "react": ">=16.3.0",
+    "react-dom": ">=16.3.0"
   }
 }
