--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "react": ">=16.3.0",
-    "react-dom": ">=16.3.0"
+    "react": ">=16.3.0"
   }
 }
