--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "clean": "npm run clean:node_modules && npm run clean:build",
     "prebuild": "npm run clean:build",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
@@ -54,7 +55,9 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
