--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,12 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: npm run test --if-present
-        
+        run: npm run test
+
       - name: Coverage
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        
+
       - name: Build
-        run: npm run build --if-present
-        
+        run: npm run build
