--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
