--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "react": "^17.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.3"
   },
