--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.3"
   },
